# multi-transpose

./: LICENSE  README.md  cross-platform-compile.yml  package-lock.json  package.json  sheet-viewer-window.html  transpose-monitor-window.html  vite.config.js
.github/workflows/: main.yml
src/: App.css  App.jsx  SheetViewerWindow.jsx  TransposeMonitorWindow.jsx  main.jsx  queries.js  sheet-viewer-window.jsx  styles.css  transpose-monitor-window.jsx  utils.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/patches/: rdev+0.5.3.patch
src-tauri/src/: audio.rs  event_processing.rs  keyboard.rs  main.rs
src-tauri/src/migrations/: init_tables.sql
src/components/: BlankTransposeMatrixItem.jsx  CurrentTransposeItem.jsx  DatabaseProvider.jsx  KeyBind.jsx  KeyBindManager.jsx  Mute.jsx  NextTransposeItem.jsx  PrevTransposeItem.jsx  SheetViewerSettings.jsx  SheetViewerSheetsPortal.jsx  TransposeInput.jsx  TransposeMatrix.jsx  TransposeMatrixItem.jsx  TransposeMonitor.jsx  Volume.jsx
src/services/storage/: settingsService.js  sheetStorageService.js
src/utils/: fileUtils.js  generalUtils.js
