[package]
name = "multi-transpose"
description = "multi-transpose"
version = "1.1.0"
authors = ["Albacusphetical"]
license = "MIT"
repository = "https://github.com/Albacusphetical/multi-transpose"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.patch]
crates = ["rdev"]

[patch.crates-io]
rdev = { path = "./target/patch/rdev-0.5.3" }

[dependencies]
tauri = { version = "1.5", features = [ "updater", "window-create", "shell-open"] }
tauri-plugin-sql = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1", features = ["sqlite"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = { version = "1.4.0", features = [] }
rdev = "0.5.3"
rodio = "0.17.3"

[build-dependencies]
patch-crate = { git = "https://github.com/mokeyish/cargo-patch-crate" }
tauri-build = { version = "1.5", features = [] }


[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
