[package]
name = "multi-transpose"
description = "multi-transpose"
version = "1.2.6"
authors = ["Albacusphetical"]
license = "MIT"
repository = "https://github.com/Albacusphetical/multi-transpose"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tauri = { version = "1.5", features = [ "fs-exists", "path-all", "fs-write-file", "fs-read-file", "updater", "window-create", "shell-open"] }
tauri-plugin-sql = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1", features = ["sqlite"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = { version = "1.4.0", features = [] }
rdev = { git = "https://github.com/Albacusphetical/rdev", branch = "master", features = ["serialize"] }
rodio = "0.17.3"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
